--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,26 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS Fetch Test</title>
 </head>
 <body>
-    <h1>Fetching data from BackEnd</h1>
-    <button onclick="fetchDataFromBE()">Fetch Message</button>
 
-    <h2>Message from backend:</h2>
-    <p id="msg">Click to load!</p>
+    <h1>Fetching all users in backend through api call via fetch function in JS</h1>
+
+    <div id="names"></div>
 
     <script>
-        function fetchDataFromBE() {
+        function fetchUsersFromBackend() {
             fetch('http://127.0.0.1:5000/api')
             .then(response => response.json())
             .then(data => {
-                document.getElementById("msg").innerText = data.msg
-            })
-            .catch(error => {
-                console.log(error)
+                console.log("data received from backend: ",data)
+                let html_string = ''
+                for (let i = 0; i < data.users.length; i++) {
+                    const user = data.users[i];
+                    // console.log(`User Email: ${user.email}, Name: ${user.name}`);
+                    html_string += `<h2> <a href='/users/${user.id}'> ${user.name} </a> </h2>`
+                }
+                document.getElementById('names').innerHTML = html_string
             })
         }
+        fetchUsersFromBackend()
     </script>
+
 </body>
 </html>
